// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/space/demo/align.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="space-align-container"
  >
    <div
      class="space-align-block"
    >
      <div
        class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
      >
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          center
        </div>
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Primary
            </span>
          </button>
        </div>
        <div
          class="dcloud-space-item"
        >
          <span
            class="mock-block"
          >
            Block
          </span>
        </div>
      </div>
    </div>
    <div
      class="space-align-block"
    >
      <div
        class="dcloud-space dcloud-space-horizontal dcloud-space-align-start"
      >
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          start
        </div>
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Primary
            </span>
          </button>
        </div>
        <div
          class="dcloud-space-item"
        >
          <span
            class="mock-block"
          >
            Block
          </span>
        </div>
      </div>
    </div>
    <div
      class="space-align-block"
    >
      <div
        class="dcloud-space dcloud-space-horizontal dcloud-space-align-end"
      >
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          end
        </div>
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Primary
            </span>
          </button>
        </div>
        <div
          class="dcloud-space-item"
        >
          <span
            class="mock-block"
          >
            Block
          </span>
        </div>
      </div>
    </div>
    <div
      class="space-align-block"
    >
      <div
        class="dcloud-space dcloud-space-horizontal dcloud-space-align-baseline"
      >
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          baseline
        </div>
        <div
          class="dcloud-space-item"
          style="margin-right:8px"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Primary
            </span>
          </button>
        </div>
        <div
          class="dcloud-space-item"
        >
          <span
            class="mock-block"
          >
            Block
          </span>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/base.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      Space
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <span
        class=""
      >
        <div
          class="dcloud-upload dcloud-upload-select dcloud-upload-select-text"
        >
          <span
            class="dcloud-upload"
            role="button"
            tabindex="0"
          >
            <input
              accept=""
              style="display:none"
              type="file"
            />
            <button
              class="dcloud-btn"
              type="button"
            >
              <span
                aria-label="upload"
                class="anticon anticon-upload"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="upload"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
              <span>
                 Click to Upload
              </span>
            </button>
          </span>
        </div>
        <div
          class="dcloud-upload-list dcloud-upload-list-text"
        />
      </span>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Confirm
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/customize.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="left:0%;right:auto;width:8%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="dcloud-slider-handle"
      role="slider"
      style="left:8%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "1": <br />,
  "2": <br />,
  "3": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn dcloud-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/debug.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      Button
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      Button
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Delete
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <span
        class="dcloud-popover-disabled-compatible-wrapper"
        style="display:inline-block;cursor:not-allowed"
      >
        <button
          class="dcloud-btn"
          disabled=""
          style="pointer-events:none"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </span>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      1
    </div>
    <div
      class="dcloud-space-item"
    >
      Button
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/gap-in-line.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="false"
    class="dcloud-switch"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    />
  </button>,
  "1": <div
    style="box-shadow:0 0 5px green"
  >
    <div
      class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
      style="flex-wrap:wrap;margin-bottom:-8px;width:310px;background:blue"
    >
      <div
        class="dcloud-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="dcloud-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="dcloud-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="dcloud-space-item"
        style="padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Middle
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>,
  "1": <br />,
  "2": <br />,
  "3": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn dcloud-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/split.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:4px"
    >
      <a
        class="dcloud-typography"
      >
        Link
      </a>
    </div>
    <span
      class="dcloud-space-item-split"
      style="margin-right:4px"
    >
      <div
        class="dcloud-divider dcloud-divider-vertical"
        role="separator"
      />
    </span>
    <div
      class="dcloud-space-item"
      style="margin-right:4px"
    >
      <a
        class="dcloud-typography"
      >
        Link
      </a>
    </div>
    <span
      class="dcloud-space-item-split"
      style="margin-right:4px"
    >
      <div
        class="dcloud-divider dcloud-divider-vertical"
        role="separator"
      />
    </span>
    <div
      class="dcloud-space-item"
    >
      <a
        class="dcloud-typography"
      >
        Link
      </a>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/vertical.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-vertical"
  >
    <div
      class="dcloud-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="dcloud-card dcloud-card-bordered"
        style="width:300px"
      >
        <div
          class="dcloud-card-head"
        >
          <div
            class="dcloud-card-head-wrapper"
          >
            <div
              class="dcloud-card-head-title"
            >
              Card
            </div>
          </div>
        </div>
        <div
          class="dcloud-card-body"
        >
          <p>
            Card content
          </p>
          <p>
            Card content
          </p>
        </div>
      </div>
    </div>
    <div
      class="dcloud-space-item"
    >
      <div
        class="dcloud-card dcloud-card-bordered"
        style="width:300px"
      >
        <div
          class="dcloud-card-head"
        >
          <div
            class="dcloud-card-head-wrapper"
          >
            <div
              class="dcloud-card-head-title"
            >
              Card
            </div>
          </div>
        </div>
        <div
          class="dcloud-card-body"
        >
          <p>
            Card content
          </p>
          <p>
            Card content
          </p>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/space/demo/wrap.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
    style="flex-wrap:wrap;margin-bottom:-16px"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="margin-right:8px;padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
      style="padding-bottom:16px"
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
